# acme1-challenge-rs

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
recallai/: Cargo.toml
recallai/scripts/: play_test_pair.sh  reencode.sh  replay.sh  run_all.sh
recallai/src/: lib.rs  main.rs
recallai/src/controller/: mod.rs
recallai/src/controller/dispatcher/: mod.rs  tokio.rs
recallai/src/data/: mod.rs
recallai/src/extra/: mod.rs
recallai/src/inspect/: mod.rs
recallai/src/meta/: mod.rs
recallai/src/rules/: mod.rs
recallai/src/spec/: mod.rs
recallai/src/strategy/: mod.rs
recallai/src/transcoder/: README.md  bufstack.rs  glommio.rs  mod.rs  mpmtmc.rs  spmtsc.rs  spstsc.rs  tokioworker.rs
recallai/src/util/: mod.rs
web-server/: Cargo.toml
web-server/scripts/: copy_ui.sh  curl.sh  curl_prod.sh
web-server/src/: lib.rs  main.rs
web-server/src/err/: mod.rs
web-server/src/handlers/: crc.rs  help.rs  mod.rs  recompose.rs  sample_rvid.rs
web-server/src/response/: mod.rs
web-server/src/server/: mod.rs
web-server/src/spec/: mod.rs
web-server/static/: index.html  sample-input.rvid  sample-rules.json  tailslim.css
