[package]
name = "recallai-ws"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.57"
recallai-vid-transcode={path="../recallai/"}
axum={version="0.7.4", features = [] }
tokio={version="1.36.0", features=["full"]}
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
axum_thiserror = "0.1.0"
mime = "0.3.17"
reqwest = {version="0.11.24", features=["json", "rustls"]}
url = "2.5.0"
crc = "*"
#axum-debug-macros = "*"
axum-macros="*"
tokio-util = {version="0.7.10", features=["full"]}
futures = "0.3.30"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1.40"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
structopt = "*"
ulid = "*"
rustls="*"

[profile.release-safe]
inherits="release"
opt-level=3
lto="fat"
strip="debuginfo"

[profile.release]
opt-level=3
lto="fat"
overflow-checks=false
strip="debuginfo"
panic="abort"
